# imprecise-movie-fuzzy-recommender

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.history/Rapport_FuzzyRec/: explication_detaill_e_20260606155554.tex  explication_detaill_e_20260606160005.tex  explication_detaill_e_20260606160053.tex  explication_detaill_e_20260606160131.tex  explication_detaill_e_20260606160157.tex  explication_detaill_e_20260606160224.tex  explication_detaill_e_20260606163451.tex  explication_detaill_e_20260606163750.tex  explication_detaill_e_20260606163751.tex  explication_detaill_e_20260606163900.tex  explication_detaill_e_20260606163931.tex  explication_detaill_e_20260606170156.tex  explication_sans_code_20260606161025.tex
Brummel_TPGAMA/: main.tex  report_rumeur.tex
Projet8_StationRecharge_Rapport/: main.tex  modele_et_formulations.tex
Projet8_StationRecharge_Rapport/code/: DUASENGE_MAYANO_PROJET8.gaml
Rapport_FuzzyRec/: explication_detaill_e.aux  explication_detaill_e.out  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  references.bib
Rapport_FuzzyRec/figures/: cli_output.txt
Rapport_FuzzyRec/sections/: 02_cadre_theorique.tex  03_architecture.tex  04_modelisation_floue.tex  05_preferences_imprecises.tex  06_pipeline.tex  07_implementation.tex  08_interfaces.tex  09_resultats.tex  10_discussion_conclusion.tex
config/: fuzzy_config.yaml
data/processed/: .gitkeep
docs/: ARCHITECTURAL_DECISIONS.md  Plan_v1___traycer.md
src/data/: loader.py  (+4 more)
tests/: test_cli.py  test_config_loader.py  test_data_manager.py  test_defuzzification.py  test_explanation.py  test_fuzzifier.py  test_fuzzy_set.py  test_gui.py  test_inference.py  test_linguistic_variables.py  test_membership.py  test_metrics.py  test_movie_repository.py  test_pipeline_factory.py  test_recommender.py  test_rule_base.py  test_visualization.py
(+68 files in other folders)
