[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logique-floue-recommender"
version = "0.1.0"
description = "Squelette d'un systeme de recommandation fonde sur la logique floue de type Mamdani."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "click>=8.1",
    "PyYAML>=6.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fuzzyrec = "ui.cli.commands:main"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "fuzzy*",
    "data*",
    "data_manager*",
    "recommender*",
    "ui*",
    "evaluation*",
    "visualization*",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
